# taucmdr

./: .bootstrap.cfg  .buildinfo  .codespell.ignore  .coveragerc  .dir-locals.el  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.yml  .pre-commit-config.yaml  .projectile  .travis.yml  .version.sh  3dvis.html  Dockerfile  LICENSE  MANIFEST.in  Makefile  README  README.md  build.sh  codecov.yml  config.inp  configure  continuous_integration.html  converttojson.py  design.html  documentation.html  genindex.html  id_rsa_Travis2GH.enc  index.html  modules.html  mypy.ini  new_compiler.html  new_feature.html  objects.inv  packaging.html  params.json  (+392 more)
.doctrees/: design.doctree  environment.pickle.REMOVED.git-id  index.doctree  tau.cf.software.doctree.REMOVED.git-id  (+8 more)
doc/: CREDITS  (+1 more)
jupyter/tau_commander/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  kernel.py  package.json  pyproject.toml  setup.py  tsconfig.json
jupyter/tau_commander/.github/workflows/: build.yml
jupyter/tau_commander/src/: App.tsx  KernelModel.ts  TableView.tsx  index.ts
jupyter/tau_commander/src/components/: ApplicationTableComponent.tsx  Dialogs.tsx  ExperimentTableComponent.tsx  MeasurementTableComponent.tsx  OptionToolbarComponent.tsx  ProjectTableComponent.tsx  TargetTableComponent.tsx  TrialTableComponent.tsx
jupyter/tau_commander/src/components/Dialogs/: ColorDialog.tsx  CopyDialog.tsx  DeleteDialog.tsx  EditDialog.tsx  ErrorDialog.tsx  LoadingDialog.tsx  NewDialog.tsx  SelectDialog.tsx
jupyter/tau_commander/style/: index.css
(+1580 files in other folders)
